Added fadeInOut animation to landing page with intersection observer and framer motion

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,5 +5,14 @@
 @layer base {
   html {
     @apply scroll-smooth;
+   
   }
+  html,
+body {
+	@apply h-full;
+}
+
+#__next {
+	@apply flex flex-col min-h-full;
+}
 }
