Landing page is almost done

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,11 +8,8 @@
    
   }
   html,
-body {
-	@apply h-full;
-}
-
-#__next {
-	@apply flex flex-col min-h-full;
-}
+  body,
+  #__next {
+    @apply w-full;
+  }
 }
