--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,6 @@
 @layer base {
   html {
     @apply scroll-smooth;
-   
   }
   html,
   body,
@@ -13,3 +12,13 @@
     @apply w-full;
   }
 }
+
+.input-normal {
+  @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primaryClick focus:border-primary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+}
+
+.input-error {
+  @apply bg-red-50 border border-red-300 text-red-900 text-sm rounded-lg focus:ring-red-500 focus:border-red-500 block w-full p-2.5 dark:bg-red-700 dark:border-red-600 dark:placeholder-red-400 dark:text-white dark:focus:ring-red-500 dark:focus:border-red-500;
+}
+
+
