--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,11 +14,13 @@
 }
 
 .input-normal {
-  @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primaryClick focus:border-primary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+  @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primaryClick focus:border-primary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 shadow-sm hover:shadow-md focus:shadow-md transition-shadow duration-300 ease-in-out;
 }
 
 .input-error {
   @apply bg-red-50 border border-red-300 text-red-900 text-sm rounded-lg focus:ring-red-500 focus:border-red-500 block w-full p-2.5 dark:bg-red-700 dark:border-red-600 dark:placeholder-red-400 dark:text-white dark:focus:ring-red-500 dark:focus:border-red-500;
 }
 
-
+.primary-btn {
+  @apply text-white w-full rounded-xl font-semibold text-xl bg-primary py-2 hover:bg-primaryClick active:bg-primaryActive;
+}
